Video 2 finished : caracter can't move

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -203,8 +203,10 @@ TemplateSequenceEditorSettings=GameMapsSettings.DefaultModes.SelectedGameModeDet
 UdpMessagingSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 BP_ThirdPersonCharacter_C=BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,
-SkeletalMeshComponent=
+SkeletalMeshComponent=BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,
 Blueprint=
+CapsuleComponent=BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,
+K2Node_VariableGet=BP_ThirdPersonCharacter_C.TransformCommon.Transform,BP_ThirdPersonCharacter_C.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -366,7 +368,7 @@ GameplayTagsSettings.GameplayTags=True
 GameplayTagsSettings.Advanced Gameplay Tags=True
 GameplayTagsSettings.Advanced Replication=True
 GameMapsSettings.DefaultModes=True
-GameMapsSettings.DefaultMaps=False
+GameMapsSettings.DefaultMaps=True
 GameMapsSettings.LocalMultiplayer=True
 GameMapsSettings.GameInstance=True
 MoviePlayerSettings.Movies=True
@@ -661,6 +663,39 @@ BP_ThirdPersonCharacter_C.Optimization=True
 BP_ThirdPersonCharacter_C.LOD=True
 BP_ThirdPersonCharacter_C.MaterialParameters=True
 BP_ThirdPersonCharacter_C.TextureStreaming=True
+test2_C.PlayerController=True
+test2_C.Tick=True
+test2_C.Cheat Manager=True
+test2_C.MouseInterface=True
+test2_C.Game=True
+test2_C.Input=True
+test2_C.WorldPartition=True
+test2_C.Controller=True
+test2_C.Replication=True
+test2_C.Actor=True
+test2_C.HLOD=True
+test2_C.Physics=True
+test2_C.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.ComponentTick=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.Events=True
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
@@ -773,17 +808,18 @@ TakeRecorderWorldSourceSettings="\"Object\" "
 TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
-BP_ThirdPersonCharacter_C="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Character="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
-Pawn="\"Object\" \"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
+BP_ThirdPersonCharacter_C="\"Object\" "
+Character="\"Object\" "
+Pawn="\"Object\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/PC_ThirdPersonCharacter
 MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem2=/Game/ThirdPerson/Blueprints/PC_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Blueprints/test2
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -840,4 +876,6 @@ GameMapsSettings=True
 
 [DetailCategoriesAdvanced]
 GameMapsSettings.DefaultModes=True
+PC_ThirdPersonCharacter_C.Tick=False
+PC_ThirdPersonCharacter_C.Replication=False
 
